--- a/config/split/dev/system.site.yml
+++ b/config/split/dev/system.site.yml
@@ -1,5 +1,5 @@
 uuid: 069e2cd6-611e-4d85-8c63-2b7c4c88b164
-name: 'Clandestinos de triana (DEV)'
+name: 'Clandestinos de triana (LOCAL)'
 mail: example@domain.com
 slogan: ''
 page:
