--- a/config/sync/config_split.config_split.local.yml
+++ b/config/sync/config_split.config_split.local.yml
@@ -9,13 +9,13 @@ module:
   admin_toolbar: 0
   admin_toolbar_tools: 0
   webprofiler: 0
-  environment_indicator: 0
 theme: {  }
 blacklist: {  }
 graylist:
   - system.site
   - devel.settings
   - devel.toolbar.settings
+  - environment_indicator.indicator
 graylist_dependents: false
 graylist_skip_equal: false
 weight: 0
