--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -18,6 +18,7 @@ module:
   devel: 0
   dynamic_page_cache: 0
   editor: 0
+  environment_indicator: 0
   environment_indicator_ui: 0
   field: 0
   field_ui: 0
