--- a/config/sync/config_split.config_split.dev.yml
+++ b/config/sync/config_split.config_split.dev.yml
@@ -8,11 +8,11 @@ folder: ../config/split/dev
 module:
   devel: 0
 theme: {  }
-blacklist: {  }
-graylist:
-  - system.site
+blacklist:
   - devel.settings
   - devel.toolbar.settings
+graylist:
+  - system.site
   - environment_indicator.indicator
 graylist_dependents: false
 graylist_skip_equal: false
