color dev switcher

--- a/config/sync/environment_indicator.switcher.dev.yml
+++ b/config/sync/environment_indicator.switcher.dev.yml
@@ -7,4 +7,4 @@ description: null
 name: Dev
 url: 'http://dev.clandestinosdetriana.me'
 fg_color: '#ffffff'
-bg_color: '#57af1e'
+bg_color: '#006600'
